# multiple_object_tracking

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  dependencies.cmake  install_dependencies.sh  mkdocs.yaml  package.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: build.yml  ci.yml  sonar-scanner.yml
.sonarqube/: sonar-scanner.properties
cmake/: cooperative_perceptionConfig.cmake  cooperative_perception_coreConfig.cmake  multiple_object_trackingConfig.cmake
docs/: CMakeLists.txt  License.md  getting_started.md  index.md  main.md  multiple_object_tracking_overview.md
docs/api_reference/: index.md
docs/api_reference/dynamic_objects/: detection.md  dynamic_object.md  track.md
docs/api_reference/scoring/: euclidean_distance_score.md  mahalanobis_distance_score.md
docs/api_reference/temporal_alignment/: default_unscented_transform.md
docs/clustering/: cluster_detections.md
docs/clustering/cluster/: add_detection.md  clear.md  get_centroid.md  get_detections.md  index.md  is_empty.md  remove_detection.md
docs/clustering/point/: index.md  operator_divide.md
docs/design/: ctrv_model.md  key_classes.md
docs/system_design/: detected_objects.rst  motion_models.rst  unscented_transform.rst
docs/track_management/fixed_threshold_track_manager/: add_tentative_track.md  constructor.md  destructor.md  get_all_tracks.md  get_confirmed_tracks.md  get_promotion_threshold.md  get_removal_threshold.md  get_tentative_tracks.md  main.md  set_promotion_threshold_and_update.md  set_removal_threshold_and_update.md  update_track_lists.md
docs/track_matching/has_association/: constructor.md  main.md  operator_call.md
include/cooperative_perception/: angle.hpp  augmented_state.hpp  clustering.hpp  common_visitors.hpp  covariance_calibration.hpp  ctra_model.hpp  ctrv_model.hpp  detected_object.hpp  detection.hpp  dynamic_object.hpp  fusing.hpp  gating.hpp  json_parsing.hpp  remove_cvref.hpp  scoring.hpp  temporal_alignment.hpp  track.hpp  track_maintenance.hpp  track_management.hpp  track_matching.hpp  units.hpp  unscented_kalman_filter.hpp  unscented_transform.hpp  utils.hpp  uuid.hpp  visitor.hpp
include/multiple_object_tracking/: angle.hpp  augmented_state.hpp  clustering.hpp  covariance_calibration.hpp  ctra_model.hpp  ctrv_model.hpp  dynamic_object.hpp  fusing.hpp  gating.hpp  json_parsing.hpp  remove_cvref.hpp  scoring.hpp  temporal_alignment.hpp  track_management.hpp  track_matching.hpp  units.hpp  unscented_kalman_filter.hpp  unscented_transform.hpp  utils.hpp  uuid.hpp  visitor.hpp
include/multiple_object_tracking/detail/: dlib_extensions.hpp
scripts/: ctra_model.py  ctrv_model.py  install_dependencies.sh  test_unscented_transform.py
src/: CMakeLists.txt  ctra_model.cpp  ctrv_model.cpp  main.cpp  unscented_transform.cpp
test/: CMakeLists.txt  test_angle.cpp  test_clustering.cpp  test_ctra_model.cpp  test_ctrv_model.cpp  test_detected_object.cpp  test_detection.cpp  test_fusing.cpp  test_gating.cpp  test_host_object_alignment.cpp  test_json_parsing.cpp  test_scoring.cpp  test_temporal_alignment.cpp  test_track_management.cpp  test_track_matching.cpp  test_unscented_kalman_filter.cpp  test_unscented_transform.cpp
test/cooperative_perception/test/: gmock_matchers.hpp
test/data/: test_clustering_disjoint.json  test_clustering_overlapping.json  test_fusing_ctra_tracks_and_detections_detections.json  test_fusing_ctra_tracks_and_detections_expected_tracks.json  test_fusing_ctra_tracks_and_detections_tracks.json  test_fusing_ctrv_tracks_and_detections_detections.json  test_fusing_ctrv_tracks_and_detections_expected_tracks.json  test_fusing_ctrv_tracks_and_detections_tracks.json  test_fusing_mixed_tracks_and_detections_expected_tracks.json  test_fusing_mixed_tracks_and_detections_tracks.json  test_fusing_partial_matched_associations_expected_tracks.json  test_fusing_partial_matched_associations_tracks.json  test_fusing_unmatched_associations_detections.json  test_json_parsing_ctrv_detection.json  test_scoring_track_to_detection_scoring_mahalanobis_tracks.json
test/multiple_object_tracking/test/: gmock_matchers.hpp
test/scripts/: test_covariance_intersection.py  test_unscented_transform.py
